plugins {
    id 'com.android.application'
    id 'com.google.gms.google-services'
}

android {


    namespace 'com.aivoice.translate'
    compileSdk 33
    useLibrary 'org.apache.http.legacy'

    defaultConfig {
        applicationId "com.aivoice.translate"
        minSdk 21
        targetSdk 33
        versionCode 2
        versionName "1.1"
        multiDexEnabled true
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"


    }

    buildTypes {
        release {
            minifyEnabled true
            shrinkResources true
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
    lintOptions {
        checkReleaseBuilds false
        abortOnError false
    }
    buildFeatures {
        viewBinding true
    }
}

dependencies {

    implementation 'androidx.appcompat:appcompat:1.6.1'
    implementation 'com.google.android.material:material:1.8.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'

    implementation 'com.google.android.material:material:1.8.0'
    implementation platform('com.google.firebase:firebase-bom:31.1.1')
    implementation 'com.google.firebase:firebase-auth:21.1.0'
    implementation 'com.google.android.gms:play-services-auth:20.4.0'
    implementation 'com.google.firebase:firebase-config:21.2.0'
    implementation 'com.google.firebase:firebase-messaging:23.1.1'

    implementation 'com.google.android.gms:play-services-ads-lite:22.0.0'

    //retrofit
    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
    implementation 'com.github.dhaval2404:imagepicker:2.1'
    //butterknife
    implementation 'com.jakewharton:butterknife:10.2.3'
    annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.3'
    implementation 'com.google.android.gms:play-services-vision:20.1.3'
    implementation "androidx.work:work-runtime:2.8.1"
    implementation 'io.github.ParkSangGwon:tedpermission-normal:3.3.0'

}
configurations.all {
    exclude group: 'com.google.android.gms', module: 'play-services-safetynet'
}


tasks.withType(JavaCompile).configureEach{
    options.fork = true
    options.forkOptions.jvmArgs +=[
            '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
            '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
            '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED']
}